# warden-core

./: .coverage  .cursorrules  .env.example  .gitignore  .gitlab-ci.yml  .openclaw-helper.sh  .warden.example.yml  .wardenignore  AGENTS.md  CHANGELOG.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CONTEXT_AWARENESS_COMPLETE.md  CONTRACT_MODE_PLAN.md  CONTRACT_MODE_ROADMAP.md  DATA_FLOW_CONTRACTS.md  DCO  DEVOPS_CLEANUP_SUMMARY.md  Dockerfile  EXTRACTOR_TESTS_CHECKLIST.md  FINAL_RELEASE_BLOCKERS_REPORT.md  HARDENING_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  NEXT_SESSION_SYSTEM_PROMPT.md  OPENCLAW_QUICKSTART.md  PHASE4_NOTES.md  PLATFORM_EXTRACTOR_TESTS_SUMMARY.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SESSION_SUMMARY.md  SOCKET_FIX_COMPLETE.md  SPEC_FRAME_ISSUES.md  SPEC_SETUP_IMPLEMENTATION.md  STREAMING_COMPLETE.md  TEST_COVERAGE_ANALYSIS.md  TEST_DOCUMENTATION.md  TLS_IMPLEMENTATION_SUMMARY.md  (+51 more)
.claude/: config.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.warden/: AI_RULES.md  TECH_DEBT.md  ai_status.md  baseline.json  config.yaml  context.yaml  ignore.yaml  project.toml  rules.yaml  suppressions.yaml
Formula/: warden.rb
cli/: .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  COMMANDS_REFERENCE.md  COMPONENTS.md  CONTRIBUTING.md  FILES_CREATED.md  FINAL_FILE_PICKER_DEBUG_REPORT.md  INSTALLATION.md  LLM_INTEGRATION_COMPLETE.md  NEXT_SESSION_INK_CLI.txt  PROJECT_SUMMARY.md  PROJECT_TREE.txt  QUICKSTART.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  TEST_COMMANDS.md  VERIFICATION_REPORT.md  dev.sh  package.json  run-tests.sh  scan_output.txt  setup-hooks.sh  test_cli_standalone.sh  test_direct.tsx  test_phase_display.sh  test_simple.py  tsconfig.json  verify-setup.sh
docker/: Dockerfile.ci-sim  ci-entrypoint.sh  docker-compose.ci-sim.yml
docs/: ARCHITECTURE.html  BATCH_PROCESSING_PATTERN.md  CHANGELOG.md  CIRCULAR_IMPORTS_PLAN.md  CI_INTEGRATION.md  CI_PERFORMANCE_PLAN.md  COMMAND_SYSTEM.md  COMMAND_SYSTEM_QUICK_START.md  CUSTOM_FRAMES.md  EXAMPLE_COMMUNITY_PLUGIN.md  FLIGHT_CHECKLISTS.md  FRAME_INFRASTRUCTURE_UPDATE.md  FRAME_SYSTEM_ARCHITECTURE.md  LSP_INTEGRATION.md  OPENCLAW_SETUP.md  ORCHESTRATOR_FIXES.md  PERFORMANCE_ROADMAP.md  PIPELINE_REFERENCE.md  PLUGIN_SYSTEM.md  RELEASE_READINESS_REPORT.md  RELEASE_ROADMAP.md  RULE_CREATION_GUIDE.md  SPEC_FRAME_PLATFORM_CONFIG.md  SPEC_FRAME_SUPPRESSION.md  TODO_HANDLING_REPORT.md  TWO_LEVEL_PLUGIN_SYSTEM.md  USER_GUIDE_PRE_POST_RULES.md  analysis-levels.md  ast-architecture.md  ci-cd-guide.md  ci_cd_integration.md  correlation_ids_implementation.md  error_handler_implementation.md  getting-started.md  go-scanner-plan-review.md  grpc-tls.md  llm-providers.md  lsp_race_condition_fix.md  openai_streaming.md
examples/: bezier_bridge.py  enhanced_pipeline_usage.py  find_hand_segments.py  find_hand_subpath.py  find_thumb.py  hand_segments.html  ipc_example.py  lsp_config_example.yaml  messy_code.py  mirror_shield.py  png_to_svg.py  remove_hand.py  remove_thumb.py  run_dogfooding.py  svg_color.html  test_secret.py  test_security.py  test_warden_with_llm.py  view_bezier_shield.html  view_no_hand.html  view_removed_thumb.html  view_symmetric_shield.html  vulnerable_code.py
extensions/warden-ast-csharp/: LICENSE  README.md  pyproject.toml
extensions/warden-ast-csharp/src/warden_ast_csharp/: __init__.py  provider.py
extensions/warden-ast-csharp/src/warden_ast_csharp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
extensions/warden-ast-csharp/tests/: __init__.py  test_csharp_provider.py
extensions/warden-ast-typescript/: README.md  pyproject.toml  verify_integration.py
extensions/warden-ast-typescript/src/warden_ast_typescript/: __init__.py  provider.py
extensions/warden-ast-typescript/src/warden_ast_typescript.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
extensions/warden-ast-typescript/tests/: __init__.py  test_typescript_provider.py
scripts/: ci_smoke_check.py  demo_error_handler.py  generate_api_docs.py  generate_grpc.py  install_dev.sh  rename_async_methods.py  scaffold_missing_tests.py  scan_full_pipeline.py  server_start.sh
src/warden_rust/: Cargo.toml  pyproject.toml
src/warden_rust/src/: lib.rs
temp/: ARCHITECTURE.md  BREAKING_CHANGE_global_rules_to_shared_rules.md  CODE_REVIEW_REPORT.md  CORE_PANEL_MISMATCH_REPORT.md  NEXT_SESSION_INK_CLI.txt  PR_REVIEW_FEATURE_ANALYSIS.md  ast-provider-plugin-system.md  code-review-plugin-system.md  feature_gap_analysis.md  fp-api-final-test-report.md  fp-api-warden-full-report.txt  java-ast-provider-summary.md  java-provider-discovery-explained.md  next-session-llm-fix.md  project-auto-config-implementation.md  scan-py-config-fix-summary.md  session-start.md  session-summary.md  warden-fixes.md  warden_core_rules.md  warden_project_context.md  warden_quick_reference.md
temp_artifact/: warden.sarif
temp_artifacts_late/: warden.sarif
tests/: CLAUDE-CONTEXT-2026-04-28.md  FLOW-CLAUDE-2026-04-28.md  FLOW-CONSENSUS-2026-04-28.md  FLOW-KIMI-2026-04-28.md  FLOW-R2-CLAUDE-2026-04-28.md  FLOW-R2-KIMI-2026-04-28.md  ISSUE-657-AUDIT-CLAUDE-2026-04-28.md  ISSUE-657-AUDIT-CONSENSUS-2026-04-28.md  ISSUE-657-AUDIT-KIMI-2026-04-28.md  ISSUE-657-AUDIT-R2-CLAUDE-2026-04-28.md  ISSUE-657-AUDIT-R2-KIMI-2026-04-28.md  ISSUE-657-FIX-KIMI-2026-04-28.md  KIMI-CONTEXT-2026-04-28.md  WCORE-CONSENSUS-2026-04-28.md  WCORE-DOC-UPDATE-2026-04-28.md  WCORE-FINALIZE-KIMI-2026-04-28.md  WCORE-R2-CLAUDE-2026-04-28.md  WCORE-R2-KIMI-2026-04-28.md  conftest.py  phase16_verification.py  test__version.py  test_all_phases.py  test_cleaning_panel_compat.py  test_dashboard_metrics.py  test_fortification_panel_compat.py  test_hook_install.py  test_legacy_cli.py  test_panel_converter_utils.py  test_pipeline_panel_compat.py  test_priority_simple.py  test_priority_system_live.py  test_project_json_compat.py  test_project_models.py  test_project_panel_compat.py  test_report_panel_compat.py  test_validation_test_results.py
verify/: expected.yaml  (+1 more)
(+1630 files in other folders)
