[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm>=6.2", "setuptools-rust>=1.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warden-core"
description = "Warden - AI Code Guardian for comprehensive code validation"
requires-python = ">=3.9"
authors = [{name = "Warden Team", email = "warden@example.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "textual>=0.60.0",
    "textual-dev>=1.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "pydantic>=2.5.0",
    "psutil>=5.9.0",
    "structlog>=24.1.0",
    "pyright>=1.1.300",
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
    "pydantic-settings>=2.0.0",
    "aiofiles>=23.0.0",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
cloud = [
    "qdrant-client>=1.7.0",
]

[project.scripts]
warden = "warden.main:main"

[tool.setuptools_scm]
write_to = "src/warden/_version.py"

# ============================================================
# Ruff - Fast Python linter and formatter
# ============================================================
[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
# Phase 1: Start with critical errors only (gradual adoption)
# Enable more rules over time as codebase improves
select = [
    "E9",     # Runtime errors only (most critical)
    "F63",    # Invalid print syntax
    "F7",     # Syntax errors
    "F82",    # Undefined names
]
ignore = []
# TODO: Gradually enable these rules:
# Phase 2: "E", "W" (pycodestyle)
# Phase 3: "I" (isort), "UP" (pyupgrade)
# Phase 4: "B" (bugbear), "C4", "SIM"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "SIM"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ============================================================
# Pytest configuration
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
