[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm>=6.2", "setuptools-rust>=1.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warden-core"
description = "Warden - AI Code Guardian for comprehensive code validation"
requires-python = ">=3.10"
authors = [{name = "Warden Team", email = "warden-core@proton.me"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = [
    "typer>=0.12.0,<0.13.0",
    "rich>=13.7.0,<14.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "httpx>=0.27.0,<0.28.0",
    "textual>=0.60.0,<0.61.0",
    "tree-sitter>=0.23.0,<1.0.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-kotlin>=0.21.0",
    "tree-sitter-dart-orchard>=0.3.0",
    "pydantic>=2.7.0,<3.0.0",
    "psutil>=5.9.0,<6.0.0",
    "structlog>=24.2.0,<25.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "aiofiles>=23.2.0,<24.0.0",
    "openai>=1.35.0,<2.0.0",
    "tenacity>=8.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0.0,<4.0.0",
    "chromadb>=0.5.0,<0.6.0",
    "tiktoken>=0.7.0,<0.8.0",
]
grpc = [
    "grpcio>=1.64.0,<1.65.0",
    "grpcio-tools>=1.64.0,<1.65.0",
]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "black==24.4.2",
    "isort==5.13.2",
    "mypy==1.10.0",
    "pyright>=1.1.360,<1.2.0",
    "textual-dev>=1.5.0,<2.0.0",
]
cloud = [
    "qdrant-client==1.9.2",
]

[project.scripts]
warden = "warden.main:main"

[tool.setuptools_scm]
write_to = "src/warden/_version.py"

# ============================================================
# Ruff - Fast Python linter and formatter
# ============================================================
[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
# Phase 1: Start with critical errors only (gradual adoption)
# Enable more rules over time as codebase improves
select = [
    "E9",     # Runtime errors only (most critical)
    "F63",    # Invalid print syntax
    "F7",     # Syntax errors
    "F82",    # Undefined names
]
ignore = []
# TODO: Gradually enable these rules:
# Phase 2: "E", "W" (pycodestyle)
# Phase 3: "I" (isort), "UP" (pyupgrade)
# Phase 4: "B" (bugbear), "C4", "SIM"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "SIM"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ============================================================
# Pytest configuration
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "live: marks tests requiring live API keys",
    "security: marks security-focused tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:chromadb.*",
    "ignore::DeprecationWarning:sentence_transformers.*",
    "ignore::DeprecationWarning:google.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::PendingDeprecationWarning:chromadb.*",
]
