[build-system]
requires = ["setuptools>=46.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warden-core"
version = "2.4.0"
description = "Warden - AI Code Guardian for comprehensive code validation"
requires-python = ">=3.10"
authors = [{name = "Warden Team", email = "warden-core@proton.me"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.7.0,<15.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "httpx>=0.27.0,<0.29.0",
    "textual>=0.60.0,<0.61.0",
    "tree-sitter>=0.23.0,<1.0.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-kotlin>=0.21.0",
    "tree-sitter-dart-orchard>=0.3.0",
    "pydantic>=2.7.0,<3.0.0",
    "psutil>=5.9.0,<8.0.0",
    "structlog>=24.2.0,<26.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "aiofiles>=23.2.0,<26.0.0",
    "openai>=1.35.0,<3.0.0",
    "tenacity>=8.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/alperduzgun/warden-core"
Repository = "https://github.com/alperduzgun/warden-core"
Issues = "https://github.com/alperduzgun/warden-core/issues"
Documentation = "https://github.com/alperduzgun/warden-core#readme"

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0.0,<4.0.0",
    "chromadb>=0.5.0,<1.6.0",
    "tiktoken>=0.7.0,<0.13.0",
]
grpc = [
    "grpcio>=1.64.0,<1.79.0",
    "grpcio-tools>=1.64.0,<1.79.0",
]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "black==24.4.2",
    "isort==5.13.2",
    "mypy==1.10.0",
    "pyright>=1.1.360,<1.2.0",
    "textual-dev>=1.5.0,<2.0.0",
]
cloud = [
    "qdrant-client==1.17.0",
]

[project.scripts]
warden = "warden.main:main"

[tool.setuptools.package-data]
"warden" = [
    "validation/frames/security/models/**/*.yaml",
    "validation/frames/security/models/*.yaml",
    "templates/**/*",
    "llm/prompts/templates/**/*.txt",
]

[tool.setuptools_scm]
write_to = "src/warden/_version.py"
fallback_version = "2.3.0"

# ============================================================
# Ruff - Fast Python linter and formatter
# ============================================================
[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
# Phase 1: Critical runtime errors (DONE)
# Phase 2: Code quality and modernization (DONE)
# Phase 3: Ruff-specific + performance (ENABLED)
select = [
    "E9",     # Runtime errors only (most critical)
    "F63",    # Invalid print syntax
    "F7",     # Syntax errors
    "F82",    # Undefined names
    # Phase 2 rules:
    "W",      # pycodestyle warnings (whitespace, line length)
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions (better comprehensions)
    "UP",     # pyupgrade (modern Python patterns)
    "SIM",    # flake8-simplify (code simplification)
    # Phase 3 rules:
    "RUF",    # ruff-specific rules (implicit optional, f-string, etc.)
    "PERF",   # performance anti-patterns
]
ignore = [
    # Phase 2 ignores:
    "B005",   # strip-with-multi-characters (intentional for path handling)
    "B007",   # unused-loop-control-variable (often intentional unpacking)
    "B008",   # function-call-in-default-argument (common in CLI apps)
    "B027",   # empty-method-without-abstract-decorator (default implementations)
    "B904",   # raise-without-from (error context preserved in logs/output)
    "SIM102", # collapsible-if (sometimes clearer as separate ifs)
    "SIM103", # needless-bool (sometimes clearer for readability)
    "SIM105", # suppressible-exception (contextlib.suppress not always clearer)
    "SIM108", # if-else-block-instead-of-if-exp (sometimes clearer)
    "SIM115", # open-file-with-context-handler (special cases exist)
    "SIM116", # if-else-block-instead-of-dict-lookup (not always clearer)
    "SIM117", # multiple-with-statements (async contexts can't always combine)
    "UP035",  # typing.List/Dict deprecation (gradual migration)
    # Phase 3 ignores:
    "RUF001", # ambiguous-unicode-character-string (Turkish chars in strings)
    "RUF002", # ambiguous-unicode-character-docstring (Turkish chars in docstrings)
    "RUF012", # mutable-class-default (dataclass fields are fine)
    "RUF013", # implicit-optional (gradual migration, low risk)
    "RUF022", # unsorted-dunder-all (cosmetic, low priority)
    "RUF005", # collection-literal-concatenation (readability preference)
    "RUF006", # asyncio-dangling-task (fire-and-forget servers are intentional)
    "RUF059", # unused-unpacked-variable (intentional destructuring)
    "PERF102", # incorrect-dict-iterator (minor perf, readability tradeoff)
    "PERF203", # try-except-in-loop (necessary for graceful error handling per-file)
    "PERF401", # manual-list-comprehension (sometimes clearer as loop)
    "PERF403", # manual-dict-comprehension (sometimes clearer as loop)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "SIM", "RUF", "PERF"]
"__init__.py" = ["F401"]
# gRPC code has undefined references (incomplete/experimental feature)
"src/warden/grpc/**/*.py" = ["F821"]
# Security frame has forward reference issues
"src/warden/validation/frames/security/security_frame.py" = ["F821"]
# Allow some deprecated imports in legacy code during migration
"src/warden/pipeline/**/*.py" = ["UP035"]
"src/warden/validation/**/*.py" = ["UP035"]
"src/warden/llm/**/*.py" = ["UP035"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ============================================================
# Pytest configuration
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "live: marks tests requiring live API keys",
    "security: marks security-focused tests",
    "acceptance: subprocess-based end-user acceptance tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:chromadb.*",
    "ignore::DeprecationWarning:sentence_transformers.*",
    "ignore::DeprecationWarning:google.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::PendingDeprecationWarning:chromadb.*",
]
