[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warden-ast-typescript"
version = "0.1.0"
description = "TypeScript/TSX AST provider for Warden using tree-sitter-typescript"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Warden Team", email = "team@warden.dev" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]
keywords = ["warden", "ast", "typescript", "tsx", "parser", "tree-sitter"]
requires-python = ">=3.11"

dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-typescript>=0.23.0",
    "structlog>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/warden-team/warden-core"
Documentation = "https://warden.dev/docs"
Repository = "https://github.com/warden-team/warden-core"
Issues = "https://github.com/warden-team/warden-core/issues"

[project.entry-points."warden.ast_providers"]
typescript = "warden_ast_typescript.provider:TypeScriptParserProvider"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["warden_ast_typescript*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function call in default argument
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
