[package]
name = "warden_core_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "warden_core_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
ignore = "0.4.22"
regex = "1.10.2"
rayon = "1.8.0"
sha2 = "0.10.8"
content_inspector = "0.2.4"
tree-sitter = "0.20.10"
memmap2 = "0.9.3"
